--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 def static BuildTime() {
     return new Date().format("yyyyMMdd", TimeZone.getTimeZone("GMT+8"))
 }
+
 android {
     compileSdkVersion rootProject.ext.compileSdk
     buildToolsVersion rootProject.ext.buildTools
@@ -17,7 +18,7 @@ android {
 
         ndk {
             //APP的build.gradle设置支持的SO库架构
-            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a","x86"
+            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86"
         }
         javaCompileOptions {
             annotationProcessorOptions {
@@ -61,14 +62,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation project(path: ':base')
 
 
-    annotationProcessor ("com.jakewharton:butterknife-compiler:${rootProject.ext.butterknife}"){
+    annotationProcessor("com.jakewharton:butterknife-compiler:${rootProject.ext.butterknife}") {
         exclude module: 'appcompat-v7'
         exclude group: 'com.android.support'
     }
-
+    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-31'
 
 }
