--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.chenghe.parttime">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,15 +9,21 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <application
-        android:name="com.chenghe.base.base.App"
+        android:name=".PartTimeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <!-- 友盟 -->
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5d36d094570df312b0000138" />
+        <meta-data android:value="${UMENG_CHANNEL}" android:name="UMENG_CHANNEL"/>
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity android:name="com.chenghe.parttime.activity.AboutUsActivity"></activity>
         <activity android:name="com.chenghe.parttime.activity.JoinPartTimeActivity" />
