--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,8 +74,10 @@ android {
         }
         applicationVariants.all { variant ->
 
-            variant.getPackageApplication().outputScope.apkDatas.forEach { apkData ->
+            variant.getPackageApplicationProvider().get().outputScope.apkDatas.forEach { apkData ->
                 // 使用Android Studio打包的文件路径
+
+                variant.getPackageApplicationProvider().get().outputDirectory = new File("${buildDir}/outputs/apk/${variant.buildType.name}/all")
                 apkData.outputFileName = "PARTTIME_${variant.buildType.name}_${variant.productFlavors[0].name}_v${defaultConfig.versionName}_${BuildTime()}.apk"
             }
 
