--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="5d36d094570df312b0000138" />
-        <meta-data android:value="${UMENG_CHANNEL}" android:name="UMENG_CHANNEL"/>
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="${UMENG_CHANNEL}" />
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity android:name="com.chenghe.parttime.activity.AboutUsActivity"></activity>
         <activity android:name="com.chenghe.parttime.activity.JoinPartTimeActivity" />
