--- a/app/pack.gradle
+++ b/app/pack.gradle
@@ -23,7 +23,7 @@ project.afterEvaluate {
 //                IS_CHANNEL = true
 //            }
 
-                def apkPath = "${buildDir}/outputs/apk/${taskName}/Jianzhi_${variant.name}_v${variant.versionName}_${BuildTime}.apk"
+                def apkPath = "${buildDir}/outputs/apk/${taskName}/Tudou_${variant.name}_v${variant.versionName}_${BuildTime}.apk"
                 def outPath = "${buildDir}/outputs/apk/${taskName}/jiagu_${BuildTime}"
                 def outApkPath = file(outPath)
                 def apk = file(apkPath)
