--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
-        android:name="com.ch.parttime.PartTimeApplication"
+        android:name=".PartTimeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
@@ -19,6 +20,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activity.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!-- 友盟 -->
         <meta-data
             android:name="UMENG_APPKEY"
@@ -26,23 +34,22 @@
         <meta-data
             android:name="UMENG_CHANNEL"
             android:value="${UMENG_CHANNEL}" />
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-        <activity android:name="com.ch.parttime.activity.AboutUsActivity"></activity>
-        <activity android:name="com.ch.parttime.activity.JoinPartTimeActivity" />
-        <activity android:name="com.ch.parttime.activity.SearchActivity" />
-        <activity android:name="com.ch.parttime.activity.PersonalResumeActivity" />
-        <activity android:name="com.ch.parttime.activity.JobDetailActivity" />
-        <activity android:name="com.ch.parttime.activity.WebActivity" />
-        <activity android:name="com.ch.parttime.activity.CategoryPartTimeActivity" />
-        <activity android:name="com.ch.parttime.activity.LoginActivity">
 
-        </activity>
-        <activity android:name="com.ch.parttime.activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".activity.AboutUsActivity" />
+        <activity android:name=".activity.JoinPartTimeActivity" />
+        <activity android:name=".activity.SearchActivity" />
+        <activity android:name=".activity.PersonalResumeActivity" />
+        <activity android:name=".activity.JobDetailActivity" />
+        <activity android:name=".activity.WebActivity" />
+        <activity android:name=".activity.CategoryPartTimeActivity" />
+        <activity android:name=".activity.LoginActivity"></activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:launchMode="singleTask">
         </activity>
 
         <provider
