--- a/base/build.gradle
+++ b/base/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     api 'com.android.support:multidex:1.0.1'
 
     //轮播图
-    api 'com.youth.banner:banner:1.4.10'
+    //api 'com.youth.banner:banner:1.4.10'
     //butterknife
     api ("com.jakewharton:butterknife:${rootProject.ext.butterknife}"){
         exclude module: 'appcompat-v7'
