增加意见反馈

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:required="false" />
 
         <activity android:name=".activity.AboutUsActivity" />
+        <activity android:name=".activity.FeedBackActivity" />
         <activity android:name=".activity.JoinPartTimeActivity" />
         <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.PersonalResumeActivity" />
