--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
-
+        <activity android:name=".activity.FeedBackActivity" />
         <activity android:name=".activity.AboutUsActivity" />
         <activity android:name=".activity.JoinPartTimeActivity" />
         <activity android:name=".activity.SearchActivity" />
