--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,15 @@
+*.iml
+.gradle
+/local.properties
+/.idea
+/.idea/libraries
+/.idea/codeStyles
+/.idea/modules.xml
+/.idea/workspace.xml
+.DS_Store
 /build
+/captures
+/jiagu/.cache
+/jiagu/jiagu.db
+.externalNativeBuild
+
