--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,7 @@ android {
                 //改变apk生成的路劲
                 //variant.getPackageApplicationProvider().get().outputDirectory = new File("${buildDir}/outputs/apk/${variant.buildType.name}/jianzhi_${BuildTime()}")
                 // apkData.outputFileName = "PARTTIME_${variant.buildType.name}_${variant.productFlavors[0].name}_v${defaultConfig.versionName}_${BuildTime()}.apk"
-                apkData.outputFileName = "Sunshine${variant.name}_v${variant.versionName}_${BuildTime()}.apk"
+                apkData.outputFileName = "Sunshine_${variant.name}_v${variant.versionName}_${BuildTime()}.apk"
             }
 
         }
