--- a/app/build.gradle
+++ b/app/build.gradle
@@ -184,12 +184,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.aar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation project(path: ':base')
     implementation project(path: ':banner')
-
     annotationProcessor "com.alibaba:arouter-compiler:${rootProject.ext.arouter_annotation}"
     annotationProcessor("com.jakewharton:butterknife-compiler:${rootProject.ext.butterknife}") {
         exclude module: 'appcompat-v7'
@@ -199,4 +199,6 @@ dependencies {
     implementation 'com.hyman:flowlayout-lib:1.1.2'
     implementation 'com.umeng.umsdk:analytics:8.0.0'
     implementation 'com.umeng.umsdk:common:2.0.0'
+    implementation files('src/libs/bcprov-jdk16-139.jar')
+    implementation files('src/libs/tracking.1.6.2.jar')
 }
