--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,13 @@ android {
         multiDexEnabled true
         //版本名后面添加一句话，意思就是flavor dimension 它的维度就是该版本号，这样维度就是都是统一的了
         flavorDimensions "1"
-        ndk {
-            //APP的build.gradle设置支持的SO库架构
-            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86"
+        ndk { abiFilters  'armeabi-v7a','x86','arm64-v8a','x86_64','armeabi' }
+        packagingOptions {
+            doNotStrip "*/armeabi-v7a/*.so"
+            doNotStrip "*/x86/*.so"
+            doNotStrip "*/arm64-v8a/*.so"
+            doNotStrip "*/x86_64/*.so"
+            doNotStrip "armeabi.so"
         }
         javaCompileOptions {
             annotationProcessorOptions {
@@ -184,7 +188,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.aar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation project(path: ':base')
