--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,13 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
-
+    packagingOptions {
+        doNotStrip "*/armeabi-v7a/*.so"
+        doNotStrip "*/x86/*.so"
+        doNotStrip "*/arm64-v8a/*.so"
+        doNotStrip "*/x86_64/*.so"
+        doNotStrip "armeabi.so"
+    }
     repositories {
         flatDir {
             dirs 'libs'   // aar目录
