--- a/base/build.gradle
+++ b/base/build.gradle
@@ -93,7 +93,8 @@ dependencies {
     //支持gif图片
     //implementation 'com.facebook.fresco:animated-gif:1.9.0'
 
-
+    api 'com.umeng.umsdk:analytics:8.1.6'
+    api 'com.umeng.umsdk:common:2.0.0'
     //dagger2
     //annotationProcessor libraries.daggerCompiler
 }
