--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,8 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.config
-            shrinkResources true
-            minifyEnabled true
+            shrinkResources false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
         }
