--- a/app/build.gradle
+++ b/app/build.gradle
@@ -202,4 +202,28 @@ dependencies {
     }
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-31'
     implementation 'com.hyman:flowlayout-lib:1.1.2'
+
+
+    //leakcanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.1'
+
+    implementation 'com.google.android:flexbox:1.0.0'
+    // 带侧边字母的列表
+    implementation 'com.camnter.easyrecyclerviewsidebar:easyrecyclerviewsidebar:1.3'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.0'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.0'
+    implementation 'org.aspectj:aspectjrt:1.8.11'
+    implementation 'com.github.hackware1993:MagicIndicator:1.6.0'
+
+    // 沉浸式
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
+    implementation 'com.github.promeg:tinypinyin:2.0.3' // TinyPinyin核心包，约80KB
+    implementation 'com.github.yalantis:ucrop:2.2.3'
+    implementation 'com.tonystark.android:socket:4.1.0'
+    implementation 'com.hyman:flowlayout-lib:1.1.2'
+    implementation 'com.facebook.stetho:stetho:1.0.1'
+    implementation 'com.github.wangjiegulu:ShadowViewHelper:1.0.1'
+    implementation 'com.contrarywind:Android-PickerView:4.1.8'
 }
