增加一些无用代买

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -225,5 +225,10 @@ dependencies {
     implementation 'com.hyman:flowlayout-lib:1.1.2'
     implementation 'com.facebook.stetho:stetho:1.0.1'
     implementation 'com.github.wangjiegulu:ShadowViewHelper:1.0.1'
-    implementation 'com.contrarywind:Android-PickerView:4.1.8'
+    //implementation 'com.contrarywind:Android-PickerView:4.1.81'
+    implementation 'com.google.dagger:dagger:2.14.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+    //implementation 'com.example.mylibrary:core:1.0.1'
+    implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
+    implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.21'
 }
