--- a/keystore.properties
+++ b/keystore.properties
@@ -2,3 +2,15 @@ storePassword=jz1234
 keyPassword=jz1234
 keyAlias=keyJz
 storeFile=keystore.jks
+
+
+
+
+--ÐÂ--
+storePassword=123456
+keyPassword=123456
+keyAlias=kljz
+storeFile=keystore.jks
+
+
+keytool -genkey -alias kljz -keyalg RSA -validity 20000 -keystore keystore.jks
