--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-storePassword=jz1234
-keyPassword=jz1234
-keyAlias=keyJz
+storePassword=897123
+keyPassword=897123
+keyAlias=songshu
 storeFile=keystore.jks
