--- a/base/build.gradle
+++ b/base/build.gradle
@@ -92,8 +92,36 @@ dependencies {
     //implementation 'com.google.android:flexbox:1.0.0'
     //支持gif图片
     //implementation 'com.facebook.fresco:animated-gif:1.9.0'
-    api 'com.umeng.umsdk:analytics:8.1.6'
-    api 'com.umeng.umsdk:common:2.0.0'
+    //基础组件库依赖(必须) Push 6.1.0版本必须升级新版本Common SDK
+    api 'com.umeng.umsdk:common:9.1.0'
+    api 'com.umeng.umsdk:utdid:1.5.2'
+    api  'com.umeng.umsdk:asms:1.1.3'
+    api 'com.umeng.umsdk:crash:0.0.4'
+//友盟push相关依赖(必须)
+    api 'com.umeng.umsdk:push:6.1.0'
+    api 'com.umeng.umsdk:alicloud-httpdns:1.2.5'
+    api 'com.umeng.umsdk:alicloud-utils:1.1.5'
+    api 'com.umeng.umsdk:alicloud_beacon:1.0.1'
+    api 'com.umeng.umsdk:agoo-accs:3.3.8.8-open-fix2'
+    api 'com.umeng.umsdk:agoo_networksdk:3.5.5'
+    api 'com.umeng.umsdk:agoo_tlog:3.0.0.17'
+    api 'com.umeng.umsdk:agoo_tnet4android:3.1.14.9'
+
+    api 'com.umeng.umsdk:huawei-basetb:2.6.3.306'
+    api 'com.umeng.umsdk:huawei-pushtb:2.6.3.306'
+    api 'com.umeng.umsdk:huawei-umengaccs:1.2.4'
+
+    api 'com.umeng.umsdk:meizu-push:3.8.7'
+    api 'com.umeng.umsdk:meizu-umengaccs:1.1.1'
+
+    api 'com.umeng.umsdk:oppo-push:2.0.2'
+    api 'com.umeng.umsdk:oppo-umengaccs:1.0.6'
+
+    api 'com.umeng.umsdk:vivo-push:2.3.5'
+    api 'com.umeng.umsdk:vivo-umengaccs:1.1.0'
+
+    api 'com.umeng.umsdk:xiaomi-push:3.7.0'
+    api 'com.umeng.umsdk:xiaomi-umengaccs:1.1.4'
 
     //dagger2
     //annotationProcessor libraries.daggerCompiler
